[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhelp"
version = "1.0"
authors = [
    { name = "Jorge Fernández" }
]
description = "Quick access to python docs from the command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyhelp = "pyhelp:pyhelp"

[project-urls]
"Homepage" = "https://github.com/jorgefz/pyhelp"